fix for image not aligning on small screens

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -84,7 +84,7 @@ header.header {
     .profile-image-continer {
       order: 0;
       .profile-image {
-        margin: 10px auto;
+        margin: auto auto;
         display: block;
       }
     }
